Fixin' the Dark mode color and others

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
-    font-weight: 800;
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .navbar h1 {
@@ -25,13 +24,18 @@ a, a:hover {
     --bs-gutter-x: 5rem;
 }
 
-.card {
-    background-color: #fafafafa;
-    margin-bottom: 70px;
+.gy-5{
+    --bs-gutter-y: 4rem;
+}
+.btn:focus, .btn:active{
+ box-shadow: none;
+}
+
+.form-control:focus{
+    box-shadow: none;
 }
 
 .card-img-top {
-
     object-fit: cover;
     width: 100%;
     height: 170px;
@@ -41,8 +45,9 @@ a, a:hover {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.form-control:focus{
-    outline: none;
+
+.dropdown-item, button.btn {
+    font-weight: 600;
 }
 
 .fs-6 {
@@ -57,10 +62,13 @@ a, a:hover {
     margin-right: 72px;
 }
 
+.card-title{
+    font-size: 1.15rem!important;
+}
+
 @media only screen and (max-width: 862px) {
     .search {
         width: 300px;
-        /*margin-bottom: 35px;*/
     }
 }
 
@@ -85,6 +93,12 @@ a, a:hover {
 @media only screen and (max-width: 450px) {
     .search {
         width: 100%;
+    }
+
+    .search-container {
+        width: 87%!important;
+        margin-left: 22px!important;
+        margin-top: 19px!important;
     }
 
     .control-start {
@@ -139,8 +153,8 @@ a, a:hover {
     height: 30px;
 }
 
-.align-middle1{
-    vertical-align: -webkit-baseline-middle!important;
+.align-middle1 {
+    vertical-align: -webkit-baseline-middle !important;
 }
 
 @media only screen and  (max-width: 1050px) {
@@ -166,6 +180,7 @@ a, a:hover {
         width: 360px;
         height: 200px;
     }
+
     .details {
         width: 100% !important;
     }
@@ -177,7 +192,6 @@ a, a:hover {
         width: 250px;
         height: 150px;
     }
-
 
 
     .details label.mb-2 {
@@ -194,11 +208,12 @@ a, a:hover {
     cursor: pointer;
 }
 
-.dropdown:hover .dropdown-menu {
-    display: block;
+.dropdown-menu {
+
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 10px !important;
-    margin-left: -16px !important;
-    margin-top: 44px !important;
+    margin-top: 2px !important;
     padding-right: 8px !important;
     border: 0 !important;
     min-width: 12.5rem !important;
@@ -223,14 +238,18 @@ a, a:hover {
     text-decoration: underline;
 }
 
-
-.dark-mode {
-    background-color: black !important;
+.bg-toggle{
+    background-color: #202c37!important;
     color: white !important;
 }
 
-.shadow-dark-mode {
-    box-shadow: 0 0.125rem 0.25rem rgb(255 255 255) !important;
+.element-toggle{
+    background-color: #2b3945!important;
+    color: white !important;
+}
+
+.text-toggle{
+    color: white;
 }
 
 .dropdown-item-shadow:hover {
@@ -239,4 +258,8 @@ a, a:hover {
 
 .dark:hover {
     box-shadow: 0 4px 2px -2px rgba(255 255 255);
+}
+
+label{
+    font-weight: 600;
 }
